# basic_computing_final_project

./: .gitignore  README.md  df_khaby.csv  df_mrbeast.csv  final_poster_template.pptx  khaby.lame.json  mrbeast.json  mrbeast_flat_final.json  mrbeast_flat_j.json  project.ipynb  project.py  pyproject.toml
info_jsons_test/: MrBeast - Shorts [UCX6OQ3DkcsbYNE6H8uQQuVA].info.json  MrBeast - Videos [UCX6OQ3DkcsbYNE6H8uQQuVA].info.json  MrBeast [@MrBeast].info.json  MrBeast_info.json
test/: t.py  yt_download_test.py  샤갈.py
yt_analysis/: codes_from_class.py  simple_ydl_downloader.py  type.py  utils.py
